add SIAM-IMA chapter as sponsor

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
              <!--<h3>UK Research and Innovation</h3>-->
           </div>
         </a>
+        
+        <h3 style="text-align: center;">
+          Edinburgh SIAM-IMA<br>Student Chapter
+        </h3>
 
       </div>
     </div>
