--- a/summer_school.html
+++ b/summer_school.html
@@ -198,7 +198,7 @@
             <td>13:30 - 15:00</td>
             <td>Catherine Powell</td>
             <td>Antonio Vergari</td>
-            <td>Estefania L. Romero</td>
+            <td>Estefania Loayza R.</td>
             <td>Heikki Haario</td>
           </tr>
 
