add accommodation options

--- a/information.html
+++ b/information.html
@@ -75,7 +75,20 @@
       <h2>Accommodation and places to visit</h2>
 
       <b>Accommodation</b>
-      <p>We recommend that you try to find accommodation as soon as possible because the Royal Highland Show will take place from June 19th to June 22nd, making it harder to find accommodation. We will be posting some accommodation suggestions here later on.</p>      
+      <p>We recommend that you try to find accommodation as soon as possible because the Royal Highland Show will take place from June 19th to June 22nd, making it harder to find accommodation. Some options are given below (availability last checked on 01/04/2025):</p>
+      <ul>
+      <li>Destiny Student - Holyrood (Brae House)</li>
+      <li>Northumberland Hotel</li>
+      <li>Travelodge Cameron Toll</li>
+      <li>Albany Hotel</li>
+      <li>Gifford House</li>
+      <li>Alba House</li>
+      <li>Arden Guest House, Craigmillar Castle Edinburgh</li>
+      <li>Balmore Guest House</li>
+      <li>Arrandale Guest House</li>
+      <li>JOIVY Haymarket</li>
+      <li>Britannia Hotel Edinburgh</li>
+      </ul>
       
       <b>Meals</b>
       <p>There are plenty of great options for dinner in the area, including:<br>Wee Greek Kitchen, Haldi, Salisbury Arms, Old Bell Inn, Matto Pizza, Korean BBQ, Verdo, Sofia's Lounge, Brass Monkey, and Leslie's Bar.
