add sentence to sponsors section

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
   <section id="sec" class="section">
     <div class="container">
       <h2>Sponsors</h2>
+      <p>We are grateful for the financial support from our sponsors:</p>
       <div class="sponsors">
         <a href="https://www.mac-migs.ac.uk/" target="_blank">
           <div class="sponsor">
