--- a/register.html
+++ b/register.html
@@ -46,7 +46,8 @@
           </a>
         </div>
       </p>
-      <p style="font-size: 1.2em;"><b>The DEADLINE for general registration is May 2, 2025, and the DEADLINE for being considered for travel support is April 4, 2025.</b></p>
+      <p style="font-size: 1.2em;"><b>The DEADLINE for general registration is May 2, 2025. APPLICATIONS FOR TRAVEL SUPPORT ARE CLOSED.</b></p>
+      <p ><b>If you need a visa to travel to Edinburgh, please email <a href="mailto:npde25.summerschool@ed.ac.uk">npde25.summerschool@ed.ac.uk</a> as soon as possible.</b></p>
 
       
       <h2>Conference dinner</h2>
