Add link to book of abstracts to summer_school.html

--- a/summer_school.html
+++ b/summer_school.html
@@ -235,7 +235,8 @@
   <section id="sec" class="section">
     <div class="container">
       <h2>Abstracts</h2>
-      <p>TBC</p> 
+      <p>The book of abstracts can be found here:</p>
+      <a href="https://drive.google.com/file/d/1MdLiA_KORmMMbqmW9vBs4h0PEfM_x719/view?usp=drive_link">NPDE25 Book of Abstracts</a>a>
 
     </div>
   </section>
