--- a/summer_school.html
+++ b/summer_school.html
@@ -236,7 +236,7 @@
     <div class="container">
       <h2>Abstracts</h2>
       <p>The book of abstracts can be found here:</p>
-      <a href="https://drive.google.com/file/d/1MdLiA_KORmMMbqmW9vBs4h0PEfM_x719/view?usp=drive_link">NPDE25 Book of Abstracts</a>a>
+      <a href="https://drive.google.com/file/d/1MdLiA_KORmMMbqmW9vBs4h0PEfM_x719/view?usp=drive_link">NPDE25 Book of Abstracts</a>
 
     </div>
   </section>
