--- a/summer_school.html
+++ b/summer_school.html
@@ -205,7 +205,7 @@
           <tr>
             <td>15:00 - 15:30</td>
             <td colspan="1">Coffee Break</td>
-            <td>-</td>
+            <td colspan="1">Conference Picture</td>
             <td colspan="1">Coffee Break</td>
             <td>Closing Remarks</td>
           </tr>
