--- a/register.html
+++ b/register.html
@@ -55,6 +55,8 @@
         </a>
       </div>
       </p>
+      <p><b>We recommend that you check if you need to apply for an ETA to enter the UK via the following link: <a href="https://www.gov.uk/guidance/apply-for-an-electronic-travel-authorisation-eta" target="_blank">ETA</a></b></p>
+      
       <p><b>If you need a visa to travel to Edinburgh, please email <a
             href="mailto:npde25.summerschool@ed.ac.uk">npde25.summerschool@ed.ac.uk</a> as soon as possible.</b></p>
 
