--- a/information.html
+++ b/information.html
@@ -72,6 +72,9 @@
   <!-- Accomodation Section -->
   <section id="sec" class="section">
     <div class="container">
+      <h2>Important:</h2>
+      <p><b>We recommend that you check if you need to apply for an ETA to enter the UK via the following link: <a href="https://www.gov.uk/guidance/apply-for-an-electronic-travel-authorisation-eta" target="_blank">ETA</a></b></p>
+
       <h2>Accommodation and places to visit</h2>
 
       <b>Accommodation</b>
