--- a/information.html
+++ b/information.html
@@ -42,6 +42,17 @@
    </div>
   </section>
 
+  <!-- Venue Section -->
+  <section id="sec" class="section">
+    <div class="container">
+      <h2>Conference Dinner</h2>
+       <p>The Conference Dinner will be held at The Rabbit Hole. You can view its location <a href="https://www.google.com/maps/place/The+Rabbit+Hole/@55.9382519,-3.1924764,17z/data=!3m1!4b1!4m6!3m5!1s0x4887c777c3a94231:0x99d72121e5523390!8m2!3d55.9382519!4d-3.1924764!16s%2Fg%2F11bwd5ckzk?entry=ttu&g_ep=EgoyMDI1MDUxMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">HERE</a>.</p>
+         
+        <p>We anticipate the set menu will cost approximately £30–£35, excluding drinks and gratuity.</p>
+  
+   </div>
+  </section>
+
   <!-- Arrive Section -->
   <section id="sec" class="section">
     <div class="container">
