--- a/information.html
+++ b/information.html
@@ -30,10 +30,18 @@
       <li><a href="information.html">Practical Information</a></li>
     </ul>
   </nav>
-  
   <!-- Venue Section -->
   <section id="sec" class="section">
     <div class="container">
+      <p><b>IMPORTANT: Please check whether you are required to apply for an Electronic Travel Authorisation (ETA) to enter the UK by visiting the following link. This applies to EU citizens as well. <a href="https://www.gov.uk/guidance/apply-for-an-electronic-travel-authorisation-eta" target="_blank">ETA</a></b></p>
+   </div>
+  </section>
+
+  <!-- Venue Section -->
+  <section id="sec" class="section">
+    <div class="container">
+      <p><b>IMPORTANT: We recommend that you check if you need to apply for an ETA to enter the UK via the following link (this is relevant for EU citizens as well): <a href="https://www.gov.uk/guidance/apply-for-an-electronic-travel-authorisation-eta" target="_blank">ETA</a></b></p>
+
       <h2>Venue</h2>
 
       <p>Room numbers TBC</p>
@@ -48,7 +56,7 @@
       <h2>Conference Dinner</h2>
        <p>The Conference Dinner will be held at The Rabbit Hole. You can view its location <a href="https://www.google.com/maps/place/The+Rabbit+Hole/@55.9382519,-3.1924764,17z/data=!3m1!4b1!4m6!3m5!1s0x4887c777c3a94231:0x99d72121e5523390!8m2!3d55.9382519!4d-3.1924764!16s%2Fg%2F11bwd5ckzk?entry=ttu&g_ep=EgoyMDI1MDUxMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">HERE</a>.</p>
          
-        <p>We anticipate the set menu will cost approximately £30–£35, excluding drinks and gratuity.</p>
+        <p>We anticipate the set menu will cost approximately £30–£35 per person, excluding drinks and gratuity.</p>
   
    </div>
   </section>
@@ -83,9 +91,6 @@
   <!-- Accomodation Section -->
   <section id="sec" class="section">
     <div class="container">
-      <h2>Important:</h2>
-      <p><b>We recommend that you check if you need to apply for an ETA to enter the UK via the following link: <a href="https://www.gov.uk/guidance/apply-for-an-electronic-travel-authorisation-eta" target="_blank">ETA</a></b></p>
-
       <h2>Accommodation and places to visit</h2>
 
       <b>Accommodation</b>
