--- a/information.html
+++ b/information.html
@@ -42,9 +42,9 @@
     <div class="container">
       <h2>Venue</h2>
 
-      <p>Room numbers TBC</p>
-      <p>Room for catering TBC</p>
-  
+    <p style="color: blue; font-weight: bold;">Lectures Location: Joseph Black Building, Theatre 100</p>
+    <p style="color: blue; font-weight: bold;">Lunch Location: James Clerk Maxwell Building, Magnet Cafe</p>
+
    </div>
   </section>
 
