--- a/information.html
+++ b/information.html
@@ -42,8 +42,8 @@
     <div class="container">
       <h2>Venue</h2>
 
-    <p style="color: blue; font-weight: bold;">Lectures Location: Joseph Black Building, Theatre 100</p>
-    <p style="color: blue; font-weight: bold;">Lunch Location: James Clerk Maxwell Building, Magnet Cafe</p>
+    <p style="color: blue; font-weight: bold;">Lectures Location: Joseph Black Building, Theatre 100.</p>
+    <p style="color: blue; font-weight: bold;">Lunch & Coffee Break Location: James Clerk Maxwell Building, Magnet Cafe.</p>
 
    </div>
   </section>
