--- a/register.html
+++ b/register.html
@@ -44,8 +44,8 @@
       <p>A portion of our funding is dedicated to covering childcare costs incurred while attending the summer school.
         Please indicate during the registration process whether you'd like to apply for support.</p>
 
-      <h2>Registration</h2>
-      <p style="font-size: 1.2em;"><b>Registration and applications for travel support are closed. You can join the
+      <h2>Registration is Closed</h2>
+<!--       <p style="font-size: 1.2em;"><b>Registration and applications for travel support are closed. You can join the
           waiting list via this form:
           <br>
         </b>
@@ -54,7 +54,7 @@
           Join the waiting list
         </a>
       </div>
-      </p>
+      </p> -->
 
     </div>
   </section>
