--- a/information.html
+++ b/information.html
@@ -44,6 +44,7 @@
 
     <p style="color: blue; font-weight: bold;">Lectures Location: Joseph Black Building, Theatre 100.</p>
     <p style="color: blue; font-weight: bold;">Lunch & Coffee Break Location: James Clerk Maxwell Building, Magnet Cafe.</p>
+    <p style="color: green; font-weight: bold;">Registration will start at 10:15 a.m. on Tuesday, 17th June, just outside lecture theatre LT100 in the Joseph Black Building.</p>
 
    </div>
   </section>
@@ -62,12 +63,12 @@
   <!-- Arrive Section -->
   <section id="sec" class="section">
     <div class="container">
-      <h2 class="section-title">How to get to James Clerk Maxwell Building</h2>
+      <h2 class="section-title">How to get to the King's Buildings Campus</h2>
 
       <div class="content-with-map">
         <div class="text-content">
   
-        <p>The event will take place at JCMB on the King's Buildings campus.</p>
+        <p>The event will take place at Joseph Black Building and JCMB on the King's Buildings campus.</p>
         <p>The address is: <br> JCMB <br> Peter Guthrie Tait Road <br> Edinburgh EH9 3FD <br> United Kingdom</p>
         </div>
         
