add walk information

--- a/information.html
+++ b/information.html
@@ -39,24 +39,32 @@
     <!-- Arrive Section -->
   <section id="sec" class="section">
     <div class="container">
-      <h2 class="section-title">To get to Edinburgh:</h2> <!-- Title aligned left -->
+      <h2 class="section-title">To get to Edinburgh</h2> <!-- Title aligned left -->
+
+      <ul>
+        <li>By plane: Edinburgh has an international airport that is connected to the city centre by bus (AirLink) and tram.</li>
+        <li>By train: The closest train station is Edinburgh Waverley in the city centre. From there, you can reach the campus by bus.</li>
+        <li>By car: The campus lies north of the Edinburgh Bypass (A720). Take the exit onto A701 and follow until Mayfield Road. Turn left and follow until turning left again into Max Born Crescent. Follow until Peter Guthrie Tait Road.</li>
+      </ul>
+    </div>
+  </section>
+
+    <!-- Walk through Edinburgh -->
+  <section id="sec" class="section">
+    <div class="container">
+      <h2 class="section-title">Tour of Edinburgh on Wednesday</h2> <!-- Title aligned left -->
 
       <div class="content-wrapper">
         <div class="text-content">
-          <ul>
-          <li>By plane: Edinburgh has an international airport that is connected to the city centre by bus (AirLink) and tram.</li>
-          <li>By train: The closest train station is Edinburgh Waverley in the city centre. From there, you can reach the campus by bus.</li>
-          <li>By car: The campus lies north of the Edinburgh Bypass (A720). Take the exit onto A701 and follow until Mayfield Road. Turn left and follow until turning left again into Max Born Crescent. Follow until Peter Guthrie Tait Road.</li>
-        </ul>
+          On Wednesday, June 18, we plan to go for a walk through Edinburgh before heading towards the conference dinner venue. We will meet at <b>15:30 downstairs in JCMB</b>. The plan is to walk up Arthur's Seat for a view of the city, and then walk past Holyrood House Palace, go up the Royal Mile, and finally see Edinburgh Castle. Depending on how well we do on time, we might walk past some more Old Town sights on our way to the conference dinner venue.
         </div>
         <div class="building">
-          <img src="./images/kb.jpg" alt="Kings Buildings">
+          <img src="./images/arthurs_seat.png" alt="View of Edinburgh">
         </div>
       </div>
     </div>
   </section>
 
- 
   <!-- Accomodation Section -->
   <section id="sec" class="section">
     <div class="container">
