--- a/summer_school.html
+++ b/summer_school.html
@@ -162,10 +162,10 @@
           </div>
         </a>
 
-        <a href="http://nolovedeeplearning.com/" target="_blank">
+        <a href="https://webhomes.maths.ed.ac.uk/~kzygalak/" target="_blank">
           <div class="speaker">
-            <img src="./images/antonio.jpg" alt="Speaker 2">
-            <h3>Dr. Antonio Vergari</h3>
+            <img src="./images/kzygalak.jpg" alt="Speaker 2">
+            <h3>Dr. Konstantinos Zygalakis</h3>
             <h3>University of Edinburgh</h3>
             <p>Topic: Scientific ML</p>
           </div>
@@ -239,7 +239,7 @@
           <tr>
             <td>12:00 - 13:30</td>
             <td class="italics">Lunch</td>
-            <td><i>Lunch</i> & Poster Session</td>
+            <td><i>Conference Picture, Lunch</i> & Poster Session</td>
             <td class="italics">Lunch</td>
             <td class="italics">Lunch</td>
           </tr>
@@ -249,13 +249,13 @@
             <td>Catherine Powell</td>
             <td>Antonio Vergari</td>
             <td>Estefania Loayza R.</td>
-            <td>Heikki Haario</td>
+            <td>-</td>
           </tr>
 
           <tr>
             <td>15:00 - 15:15</td>
             <td rowspan="2" class="italics">Coffee Break</td>
-            <td>Conference Picture</td>
+            <td>-</td>
             <td rowspan="2" class="italics">Coffee Break</td>
             <td>Closing Remarks</td>
           </tr>
