--- a/summer_school.html
+++ b/summer_school.html
@@ -239,15 +239,15 @@
           <tr>
             <td>12:00 - 13:30</td>
             <td class="italics">Lunch</td>
-            <td><i>Conference Picture, Lunch</i> & Poster Session</td>
+            <td>Picture,<i> Lunch</i> & Poster Session</td>
             <td class="italics">Lunch</td>
-            <td class="italics">Lunch</td>
+            <td class="italics"> Closing Remarks & Lunch</td>
           </tr>
 
           <tr>
             <td>13:30 - 15:00</td>
             <td>Catherine Powell</td>
-            <td>Antonio Vergari</td>
+            <td>Konstantinos Zygalakis</td>
             <td>Estefania Loayza R.</td>
             <td>-</td>
           </tr>
@@ -257,13 +257,12 @@
             <td rowspan="2" class="italics">Coffee Break</td>
             <td>-</td>
             <td rowspan="2" class="italics">Coffee Break</td>
-            <td>Closing Remarks</td>
+            <td rowspan="6">-</td>
           </tr>
 
           <tr>
             <td>15:15 - 15:30</td>
-            <td rowspan="2">-</td>
-            <td rowspan="3">-</td>
+            
           </tr>
 
           <tr>
