--- a/summer_school.html
+++ b/summer_school.html
@@ -254,9 +254,9 @@
 
           <tr>
             <td>15:00 - 15:30</td>
-            <td rowspan="2" class="italics">Coffee Break</td>
-            <td rowspan="3">-</td>
-            <td rowspan="2" class="italics">Coffee Break</td>
+            <td class="italics">Coffee Break</td>
+            <td rowspan="2">-</td>
+            <td class="italics">Coffee Break</td>
           </tr>
 
           <tr>
