--- a/summer_school.html
+++ b/summer_school.html
@@ -335,8 +335,8 @@
     <div class="container">
       <h2>Abstracts</h2>
       <p>The book of abstracts can be found here:</p>
-       <!-- <a href="https://drive.google.com/file/d/1MdLiA_KORmMMbqmW9vBs4h0PEfM_x719/view?usp=drive_link" target="_blank" rel="noopener noreferrer">NPDE25 Book of Abstracts</a> -->
-      <a href="NA_summer_school.pdf" target="_blank" rel="noopener noreferrer">NPDE25 Book of Abstracts</a>
+       <a href="https://drive.google.com/file/d/1MdLiA_KORmMMbqmW9vBs4h0PEfM_x719/view?usp=drive_link" target="_blank" rel="noopener noreferrer">NPDE25 Book of Abstracts</a> 
+      <!-- <a href="NA_summer_school.pdf" target="_blank" rel="noopener noreferrer">NPDE25 Book of Abstracts</a>-->
 
     </div>
   </section>
